# fastoo

./: README.md  pyproject.toml
src/fastoo/: __init__.py  app.py  config.py  init.py
src/fastoo/api/: cli.py  file.py  module.py  templates.py  validators.py  verify.py
src/fastoo/modules/auth/: info.toml  view.py
src/fastoo/modules/auth/templates/: abc.html
src/fastoo/modules/www/: forms.py  info.toml  view.py
src/fastoo/modules/www/templates/: index.html
src/fastoo/templates/themes/front/dingy/: index.html
