[project]
name = "Fastoo"
description = "A super-charged FastAPI framework for even faster delivery"
readme = "README.md"
license = {file = "LICENSE"}
maintainers = [{name = "Abdur-Rahmaan Janhangeer", email = "arj.python@gmail.com"}]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Fastoo",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
requires-python = ">=3.8"
dependencies = [
    "fastapi",
    "uvicorn",
    "alembic",
    "sqlmodel",
    "pydantic-settings",
    "importlib-metadata>=3.6.0; python_version < '3.10'",
]
dynamic = ["version"]

[project.urls]
"Source Code" = "https://github.com/Abdur-rahmaanJ/fastoo"
"Issue Tracker" = "https://github.com/Abdur-rahmaanJ/fastoo/issues/"

[project.scripts]
flask = "fastoo.cli:main"
